[package]
name = "aiscript-engine-ast"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-common.path = "../aiscript-engine-common"
aiscript-engine-lexer.path = "../aiscript-engine-lexer"
derive-node.path = "../derive-node"
derive-wrapper.path = "../derive-wrapper"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
utf16-literal.path = "../utf16-literal"

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions = "1.4.1"
