[package]
name = "aiscript-engine-ast"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-common.workspace = true
aiscript-engine-lexer.workspace = true
derive-node.workspace = true
derive-wrapper.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
utf16-literal.workspace = true

[dev-dependencies]
indoc.workspace = true
pretty_assertions.workspace = true
