[package]
name = "aiscript-engine-interpreter"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-ast.workspace = true
aiscript-engine-common.workspace = true
aiscript-engine-types.workspace = true
gc-arena.workspace = true
gc-arena-derive.workspace = true
indexmap.workspace = true
utf16-literal.workspace = true
