[package]
name = "aiscript-engine-interpreter"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-ast.workspace = true
aiscript-engine-common.workspace = true
aiscript-engine-types.workspace = true
aiscript-engine-values.workspace = true
gc.workspace = true
indexmap.workspace = true
utf16-literal.workspace = true
