[package]
name = "aiscript-engine-ir"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-ast.workspace = true
aiscript-engine-common.workspace = true
aiscript-engine-library.workspace = true
aiscript-engine-values.workspace = true
utf16-literal.workspace = true

[dev-dependencies]
aiscript-engine-parser.workspace = true
pretty_assertions.workspace = true
