[package]
name = "aiscript-engine-parser"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-ast.workspace = true
aiscript-engine-common.workspace = true
aiscript-engine-lexer.workspace = true
aiscript-engine-types.workspace = true
utf16-literal.workspace = true
