[package]
name = "aiscript-engine-vm"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
aiscript-engine-common.workspace = true
aiscript-engine-ir.workspace = true
aiscript-engine-types.workspace = true
gc-arena.workspace = true
gc-arena-derive.workspace = true
indexmap.workspace = true
