[package]
name = "aiscript-engine"
description = "An AiScript Engine written in Rust."
repository = "https://github.com/takejohn/aiscript-engine"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aiscript-engine-parser.workspace = true