[package]
name = "aiscript-js-build-tests"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]

[dev-dependencies]
aiscript-engine.workspace = true
aiscript-engine-ast.workspace = true
aiscript-engine-common.workspace = true
pretty_assertions.workspace = true
serde_json.workspace = true
